docs/assets/css/main.css
/*getting lato*/
@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');

body {
    font-family: "Lato", sans-serif;
    font-weight: 400;
    font-style: normal;
    background: #222222;
    color: #FFE7DC;
    font-size: 1.3vw;
    overflow-x: hidden;
    margin: 20vw;
    padding: 0;
    scrollbar-width: thin;
}
    body.modal-open {
        overflow: hidden;
    }
    html::-webkit-scrollbar, body::-webkit-scrollbar {
        width: 5px;
    }

    html::-webkit-scrollbar-thumb, body::-webkit-scrollbar-thumb {
        background-color: rgba(255, 255, 255, 0.3); /* Light and subtle */
        border-radius: 10px;
    }

    html::-webkit-scrollbar-track, body::-webkit-scrollbar-track {
        background: transparent; 
    }

.body-wrapper::before,
.body-wrapper::after {
    content: "";
    position: absolute;
    top: 0;
    width: 20%;
    /*background-color: #fff9d9;*/
    background-color: #b5ffde;
    background: linear-gradient(to right, var(--side-panels), rgba(0, 0, 0, 0) 72%);
    z-index: 1;
    height: var(--full-height);
}

.body-wrapper::before {
    left: 0;
}

.body-wrapper::after {
    right: 0;
    background: linear-gradient(to left, var(--side-panels), rgba(0, 0, 0, 0) 72%);
}

.modal {
    display: none;
    position: fixed;
    z-index: 1000;
    left: 0;
    top: -3vh;
    width: 100vw;
    height: 110vh;
    background-color: rgba(0, 0, 0, 0.5);
    overflow: hidden;

    font-family: "Lato", sans-serif;
    font-weight: 400;
    font-style: normal;
    color: #FFE0CD;
}

.modal-content {
    background-color: #222222;
    color: #FFE7DC;
    margin: 10% auto;
    padding: 20px;
    border-radius: 10px;
    width: 50%;
    overflow-y: scroll;
    max-height: 70vh;
    scrollbar-width: none;
}
    .modal-content::-webkit-scrollbar {
        width: 0vw; /* Makes scrollbar thinner */
    }

.image {
    position: relative;
    transform: translateX(-50%); 
    border-radius: 1vh;
    margin-bottom: 10px;
}

.projectButton {
    display: inline-block; /* Ensures the button takes up only the necessary width */
    width: auto; /* Prevents it from stretching */
    padding: 10px 20px;
    text-align: center;
    border-radius: 5px;
    border: 0.35vh solid #FFE7DC;
    background-color: var(--read-more);
    color: white;
    cursor: pointer;
}

    .projectButton:hover {
        background-color: var(--read-more);
        border: 0.8vh solid #FFE7DC;
    }

.card-holder {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 1vw;
    margin: 0 auto;
    max-width: 120%;
}
.card {
    display: flex;
    flex-direction: column;
    width: 300px;
    border-radius: 15px;
    border: 0.5vh solid #FFE7DC;
    overflow: hidden;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
    margin: 20px;
}

.card-content {
    padding: 15px;
    text-align: left;
}

.card-image {
    width: 80%;
    height: 22vh;
    position: relative; /* or absolute if necessary */
    left: 50%;
    top: 1.5vh;
    transform: translateX(-50%); /* Center horizontally */
    /*background-color: #555; /* Gray color */
    border-radius: 0.7vh;
    margin-bottom: 10px;
}

.section-title {
    position: relative;
    display: flex;
    flex-direction: column; 
}

    .section-title h2 {
        font-size: clamp(1.5rem, 4vw, 3rem);
        font-weight: 650;
        color: #FFE7DC;
        margin: 0;
        padding-bottom: 8px;
    }

    .section-title::after {
        content: "";
        position: relative;
        width: 100%;
        height: 4px;
        background-color: #FFE7DC;
    }


    .bubble-container {
        display: flex;
        flex-wrap: wrap; 
        gap: 20px; 
        margin-top: 10px;
    }

    .bubble {
        display: flex;
        flex-direction: column;
        align-items: center;
        text-align: center;

        position:relative;
        top:1.5vh;
    }

        .bubble span {
            display: inline-block;
            font-weight: 700;
            color: #fcfaf0;
            border: 0.4vh solid #FFE7DC;
            border-radius: 15px;
            padding: 5px 15px;
            font-size: clamp(1rem, 1vw, 2rem);
            background-color: #103361;
        }

